compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_array_segment_size2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case <<1>> { <<1:size(2)-size(8)>> -> a }"
---
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:26
  │
1 │ case <<1>> { <<1:size(2)-size(8)>> -> a }
  │                          ^^^^^^^ This is an extra size specifier

Hint: This segment already has a size.
See: https://gleam.run/book/tour/bit-arrays.html

