compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_array_using_pattern_variables_from_other_bit_array.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let assert #(<<a>>, <<b:size(a)>>) = #(<<2>>, <<2:2>>)"
---
----- SOURCE CODE
let assert #(<<a>>, <<b:size(a)>>) = #(<<2>>, <<2:2>>)

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:1:30
  │
1 │ let assert #(<<a>>, <<b:size(a)>>) = #(<<2>>, <<2:2>>)
  │                              ^

The name `a` is not in scope here.
