compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_arrays3.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 24
expression: "let <<x:utf16>> = <<1>> x"
---
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:7
  │
1 │ let <<x:utf16>> = <<1>> x
  │       ^^^^^^^ This cannot be a variable

Hint: in patterns utf8, utf16, and utf32  must be an exact string.
See: https://gleam.run/book/tour/bit-arrays.html

